chore: コンテナのセットアップ時に、パッケージのインストールからprismaのクライアント作成までをシェルで実行するファイル作成

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,7 +6,7 @@
   // "features": {
   //   "ghcr.io/devcontainers/features/docker-in-docker:2": {}
   // },
-  "postCreateCommand": "npm i",
+  "postCreateCommand": "sh set-up.sh",
   "customizations": {
     "vscode": {
       "extensions": [
