--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,6 +3,7 @@
   "dockerComposeFile": "compose.yml",
   "service": "app",
   "workspaceFolder": "/app/",
+  "forwardPorts": [3000],
   // "features": {
   //   "ghcr.io/devcontainers/features/docker-in-docker:2": {}
   // },
